--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
-    dataBinding{
-        enabled=true
+    dataBinding {
+        enabled = true
     }
     defaultConfig {
         applicationId "ir.ea2.android_mvvm_restful"
@@ -35,5 +35,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:2.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
